--- a/style.css
+++ b/style.css
@@ -71,41 +71,125 @@ body {
   line-height: 1;
   font-weight: 400;
   color: #555;
+
+  max-width: 120rem;
+  min-height: 100vh;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
 }
 
 /* ********************************* */
 /* GENERAL STYLES */
 /* ********************************* */
-.container {
-  max-width: 120rem;
-  height: 100vh;
-  margin: 0 auto;
+footer {
+  max-width: 110rem;
+  height: auto;
+  padding: 3rem 5rem;
+
+  display: grid;
+  grid-template-columns: repeat(4, auto);
+  column-gap: 6rem;
+
+  background-color: #fff;
+}
+
+.footer-subheading {
+  font-size: 1.6rem;
+  color: black;
+  font-weight: 700;
+}
+
+.footer-list {
+  list-style: none;
+  margin-top: 2.5rem;
 
   display: flex;
+  flex-direction: column;
+  gap: 0.75rem;
+}
+
+.footer-list a {
+  text-decoration: none;
+  color: #868e96;
+  font-size: 1.6rem;
+}
+
+.footer-list-item {
+  line-height: 1.5;
+}
+
+/* ********************************* */
+/* ASIDE SECTION */
+/* ********************************* */
+footer aside {
+  align-self: center;
+  padding-left: 2rem;
+
+  display: flex;
+  flex-direction: column;
   justify-content: center;
-  align-items: center;
+  gap: 2rem;
 }
 
-.fa {
-  font-size: 20px !important;
-  width: 50px;
-  height: 50px;
-
-  text-align: center;
-  /* text-decoration: none;
-  display: flex !important;
-  align-items: center !important;
-  justify-content: center !important; */
+.footer-aside-text {
+  font-size: 1.6rem;
+  font-style: italic;
+  line-height: 1.5;
+  color: #868e96;
+  padding-left: 2rem;
+  margin-top: -2.5rem;
 }
 
-.fa-facebook {
-  background: #3B5998;
-  color: white;
+.social-links {
   display: flex;
-  ;
+  align-items: center;
+  gap: 1rem;
+  padding-left: 2rem;
 }
 
-.fa-twitter {
-  background: #55ACEE;
-  color: white;
+.social-links a {
+  display: inline-block;
+  text-decoration: none;
 }
+
+.social-icon {
+  font-size: 2rem;
+  color: #B08807;
+}
+
+/* ********************************* */
+/* NEWSLETTER SECTION */
+/* ********************************* */
+.newsletter-input {
+  font-size: 1.6rem;
+  padding: 1.25rem 1rem;
+  margin-top: 2.5rem;
+  border: 1px solid #adb5bd;
+  border-radius: 3px;
+  
+  width: 100%;
+}
+
+.newsletter-input::placeholder {
+  color: #495057;
+  font-style: italic;
+  letter-spacing: 1.2;
+}
+
+.newsletter-input:focus.newsletter-input::placeholder {
+  color: transparent;
+}
+
+.input-container {
+  position: relative;
+}
+
+.input-icon {
+  position: absolute;
+  top: 55%;
+  right: 5%;
+}
+
